<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Study Demo</string>
    <string name="application_name">Browser</string>
    <string name="application_name_smartisan">Browser</string>
    <string name="choose_upload">Choose file for upload</string>
    <string name="uploads_disabled">File uploads are disabled.</string>
    <string name="new_tab">New Tab</string>
    <string name="new_incognito_tab">New Incognito Tab</string>
    <string name="tab_bookmarks">Bookmarks</string>
    <string name="tab_most_visited">Most Visited</string>
    <string name="tab_history">History</string>
    <string name="tab_snapshots">Saved pages</string>
    <string name="added_to_bookmarks">Added to bookmarks.</string>
    <string name="removed_from_bookmarks">Removed from bookmarks.</string>
    <string name="sign_in_to">Sign in to <xliff:g id="hostname">%s1</xliff:g> \"<xliff:g id="realm">%s2</xliff:g>\"</string>
    <string name="username">Name</string>
    <string name="password">Password</string>
    <string name="action">Sign in</string>
    <string name="bookmarks_search">Browser</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title_bar_loading">Loading\u2026</string>
    <string name="page_info">Page Info</string>
    <string name="page_info_view">View Page Info</string>
    <string name="page_info_address">Address:</string>
    <string name="ssl_warnings_header">There are problems with the security certificate for this site.</string>
    <string name="ssl_continue">Continue</string>
    <string name="security_warning">Security Warning</string>
    <string name="view_certificate">View Certificate</string>
    <string name="ssl_go_back">Go Back</string>
    <string name="ssl_untrusted">This certificate isn\'t from a trusted authority.</string>
    <string name="ssl_mismatch">The name of the site doesn\'t match the name on the certificate.</string>
    <string name="ssl_expired">This certificate has expired.</string>
    <string name="ssl_not_yet_valid">This certificate isn\'t valid yet.</string>
    <string name="ssl_date_invalid">This certificate has an invalid date.</string>
    <string name="ssl_invalid">This certificate is invalid.</string>
    <string name="ssl_unknown">Unknown certificate error.</string>
    <string name="stopping">Stopping\u2026</string>
    <string name="stop">Stop</string>
    <string name="reload">Refresh</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="save">OK</string>
    <string name="do_not_save">Cancel</string>
    <string name="location">Address</string>
    <string name="account">Account</string>
    <string name="containing_folder">Add to</string>
    <string name="new_folder">New Folder</string>
    <string name="delete_folder">Delete folder</string>
    <string name="no_subfolders">No subfolders.</string>
    <string name="add_to_bookmarks_menu_option">Bookmarks</string>
    <string name="add_to_homescreen_menu_option">Home screen</string>
    <string name="add_to_other_folder_menu_option">Other folder</string>
    <string name="name">Label</string>
    <string name="http">http://</string>
    <string name="save_to_bookmarks">Save to Bookmarks</string>
    <string name="bookmark_this_page">Bookmark this page</string>
    <string name="edit_bookmark">Edit Bookmark</string>
    <string name="create_shortcut_bookmark">Add Shortcut to Home Screen</string>
    <string name="open_bookmark">Open</string>
    <string name="remove_bookmark">Delete bookmark</string>
    <string name="remove_from_bookmarks">Remove from Bookmarks</string>
    <string name="remove_history_item">Remove from history</string>
    <string name="set_as_homepage">Set as homepage</string>
    <string name="bookmark_not_saved">Couldn\'t save bookmark.</string>
    <string name="homepage_set">Homepage set.</string>
    <string name="bookmark_url_not_valid">This URL isn\'t valid.</string>
    <string name="bookmark_cannot_save_url">This URL can\'t be bookmarked.</string>
    <string name="bookmark_page">Bookmark last-viewed page</string>
    <string name="bookmark_thumbnail_view">Thumbnails</string>
    <string name="bookmark_list_view">List</string>
    <string name="current_page">from\u0020</string>
    <string name="open_all_in_new_window">Open all in new tabs</string>
    <string name="goto_dot">Go</string>
    <string name="select_dot">Select text</string>
    <string name="sendText">Choose an action for text</string>
    <string name="close_other_tabs">Close other tabs</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="shortcut_bookmark">Bookmark</string>
    <string name="shortcut_bookmark_title">Choose a bookmark</string>
    <string name="history">History</string>
    <string name="menu_view_download">Downloads</string>
    <string name="copy_page_url">Copy page URL</string>
    <string name="share_page">Share Page</string>
    <string name="menu_save_snapshot">Save for offline reading</string>
    <string name="saving_snapshot">Saving\u2026</string>
    <string name="snapshot_failed">Couldn\'t save for offline reading.</string>
    <string name="contextheader_folder_bookmarkcount"><xliff:g id="bookmark_count">%d</xliff:g> bookmarks</string>
    <string name="contextheader_folder_empty">Empty folder</string>
    <string name="contextmenu_openlink">Open</string>
    <string name="contextmenu_openlink_newwindow_background">Open in new background tab</string>
    <string name="contextmenu_savelink">Save link</string>
    <string name="contextmenu_sharelink">Share link</string>
    <string name="contextmenu_copy">Copy</string>
    <string name="contextmenu_copylink">Copy Link URL</string>
    <string name="contextmenu_download_image">Save Image</string>
    <string name="contextmenu_view_image">View Image</string>
    <string name="contextmenu_set_wallpaper">Set as wallpaper</string>
    <string name="contextmenu_dial_dot">Dial\u2026</string>
    <string name="contextmenu_add_contact">Add contact</string>
    <string name="contextmenu_send_mail">Send email</string>
    <string name="contextmenu_map">Map</string>
    <string name="choosertitle_sharevia">Share via</string>
    <string name="choosertitle_operation">Choose Operation</string>
    <string name="clear">Clear</string>
    <string name="replace">Replace</string>
    <string name="browser_bookmarks_page_bookmarks_text">Bookmarks</string>
    <string name="menu_preferences">Settings</string>
    <string name="pref_content_title">Page content</string>
    <string name="pref_allow_apptabs">Allow multiple tabs per app</string>
    <string name="pref_content_load_images">Load Images</string>
    <string name="pref_content_load_images_summary">Display images on web pages</string>
    <string name="pref_content_block_popups">Block pop-ups</string>
    <string name="pref_content_javascript">Enable JavaScript</string>
    <string name="pref_memory_monitor">Enable Memory Monitor</string>
    <string name="pref_content_open_in_background">Open in background</string>
    <string name="pref_content_plugins">Enable plug-ins</string>
    <string-array name="pref_content_plugins_values" translatable="false">
        <item>ON</item>
        <item>ON_DEMAND</item>
        <item>OFF</item>
    </string-array>
    <string name="pref_content_open_in_background_summary">Open new tabs behind the current tab</string>
    <string name="pref_content_homepage">Set homepage</string>
    <string name="pref_content_search_engine">Set search engine</string>
    <string name="pref_content_search_engine_summary">Choose a search engine</string>
    <string name="pref_set_homepage_to">Set to</string>
    <string-array name="pref_homepage_choices">

        
        <item>Current page</item>
        
        <item>Blank page</item>
        
        <item>Default page</item>
        
        <item>Most visited sites</item>
        
        <item>Other</item>
    </string-array>
    <string-array name="pref_homepage_values" translatable="false">
        <item>current</item>
        <item>blank</item>
        <item>default</item>
        <item>most_visited</item>
        <item>other</item>
    </string-array>
    <string name="pref_content_autofit">Auto-fit pages</string>
    <string name="pref_content_autofit_summary">Format webpages to fit the screen</string>
    <string name="pref_general_title">General</string>
    <string name="pref_general_sync_title">Sync</string>
    <string name="pref_general_autofill_title">Auto-fill</string>
    <string name="pref_autofill_enabled">Form auto-fill</string>
    <string name="pref_autofill_enabled_summary">Fill out web forms with a single touch</string>
    <string name="pref_autofill_profile_editor">Auto-fill text</string>
    <string name="pref_autofill_profile_editor_summary">Set up text to auto-fill in web forms</string>
    <string name="pref_autologin_title">Automatic Google signin</string>
    <string name="pref_autologin_progress">Signing into Google sites using <xliff:g>%s</xliff:g></string>
    <string name="autologin_bar_text">Sign in as</string>
    <string name="autologin_bar_login_text">Sign in</string>
    <string name="autologin_bar_hide_text">Hide</string>
    <string name="autologin_bar_error">Couldn\'t sign in.</string>
    <string name="autofill_profile_editor_heading">Type the text you want to auto-fill in web forms.</string>
    <string name="autofill_profile_editor_name">Full name:</string>
    <string name="autofill_profile_editor_email_address">Email:</string>
    <string name="autofill_profile_editor_company_name">Company name:</string>
    <string name="autofill_profile_editor_address_line_1">Address line 1:</string>
    <string name="autofill_profile_editor_address_line_1_hint">Street address, P.O. box, c/o</string>
    <string name="autofill_profile_editor_address_line_2">Address line 2:</string>
    <string name="autofill_profile_editor_address_line_2_hint">Apartment, suite, unit, building, floor, etc.</string>
    <string name="autofill_profile_editor_city">City/Town:</string>
    <string name="autofill_profile_editor_state">State/Province/Region:</string>
    <string name="autofill_profile_editor_zip_code">Zip code:</string>
    <string name="autofill_profile_editor_country">Country:</string>
    <string name="autofill_profile_editor_phone_number">Phone:</string>
    <string name="autofill_profile_editor_phone_number_invalid">Invalid phone number.</string>
    <string name="autofill_profile_editor_save_profile">Save</string>
    <string name="autofill_profile_successful_save">Auto-fill text saved.</string>
    <string name="autofill_profile_successful_delete">Auto-fill text deleted.</string>
    <string name="autofill_profile_editor_delete_profile">Delete</string>
    <string name="autofill_setup_dialog_message">The browser can automatically complete web forms like this one. Do you want to set up your auto-fill text?</string>
    <string name="autofill_setup_dialog_negative_toast">You can always set up your auto-fill text from the Browser &gt; Settings &gt; General screen.</string>
    <string name="disable_autofill">Disable auto-fill</string>
    <string name="pref_privacy_security_title">Privacy &amp; Security</string>
    <string name="pref_privacy_clear_cache">Clear Cache</string>
    <string name="pref_default_zoom">Default zoom</string>
    <string name="pref_default_zoom_dialogtitle">Default zoom</string>
    <string name="pref_extras_reset_default_title">Reset defaults</string>
    <string name="pref_extras_reset_default">Reset to default</string>
    <string name="pref_default_text_encoding">Text encoding</string>
    <string name="pref_default_text_encoding_dialogtitle">Text encoding</string>
    <string name="pref_default_text_encoding_default" translatable="false">Latin-1</string>
    <string name="import_bookmarks_wizard_done">Done</string>
</resources>