<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <com.android.browser.preferences.SwitchExPreference
        android:defaultValue="true"
        android:key="enable_javascript"
        android:title="@string/pref_content_javascript" />

    <PreferenceCategory
        android:layout="@layout/browser_preference_category"
        android:title="@string/pref_content_title" >
        <ListPreference
            android:defaultValue="MEDIUM"
            android:dialogTitle="@string/pref_default_zoom_dialogtitle"
            android:entries="@array/pref_default_zoom_choices"
            android:entryValues="@array/pref_default_zoom_values"
            android:key="default_zoom"
            android:layout="@layout/browser_preference_listference_top"
            android:title="@string/pref_default_zoom" />

        <com.android.browser.preferences.SwitchExPreference
            android:defaultValue="true"
            android:key="block_popup_windows"
            android:title="@string/pref_content_block_popups" />

        <ListPreference
            android:defaultValue="@string/pref_default_text_encoding_default"
            android:dialogTitle="@string/pref_default_text_encoding_dialogtitle"
            android:entries="@array/pref_default_text_encoding_choices"
            android:entryValues="@array/pref_default_text_encoding_values"
            android:key="default_text_encoding"
            android:layout="@layout/browser_preference_listference_bottom"
            android:title="@string/pref_default_text_encoding" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/browser_preference_category"
        android:title="@string/pref_extras_reset_default_title" >
        <com.android.browser.preferences.BrowserYesNoPreference
            android:dialogIcon="@android:drawable/ic_dialog_alert"
            android:dialogMessage="@string/pref_extras_reset_default_dlg"
            android:key="reset_default_preferences"
            android:layout="@layout/browser_preference_listference"
            android:title="@string/pref_extras_reset_default" />
    </PreferenceCategory>

</PreferenceScreen>
